Doc: fix components not align vertically

--- a/style/style.css
+++ b/style/style.css
@@ -4,7 +4,7 @@
 }
 
 .search-bar input {
-  width: 75%;
+  width: 100%;
 }
 
 .video-item img {
@@ -12,6 +12,7 @@
 }
 
 .video-detail .details {
+  display: inline-block;
   margin-top: 10px;
   padding: 10px;
   border: 1px solid #ddd;
